--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@
 - [x] Implement settings/config file
 - [x] Implement leaderboard
 - [x] Implement list_snipes
+- [x] Implement config view
 - [ ] Implement image verification for snipes (attach image check)
 - [ ] Implement achievements
 - [ ] Implement safe windows
@@ -15,6 +16,7 @@
 
 ## Data Management
 - [x] Store game data in server-specific JSON files
+- [x] Convert JSON to MongoDB storage
 - [x] Remove invalid snipe
 
 ## UX Improvements
