Implemented game initalization check across the board

--- a/TODO
+++ b/TODO
@@ -20,6 +20,7 @@
 ## UX Improvements
 - [ ] Make bot request confirmation from players players when or sniped
 - [ ] Add check for most commands to ensure game is initialized
+- [ ] Allow /config to view current settings
 
 ## Admin Commands
 - [x] Add /resetgame
