--- a/TODO
+++ b/TODO
@@ -18,7 +18,8 @@
 - [x] Store game data in server-specific JSON files
 - [x] Convert JSON to MongoDB storage
 - [x] Remove invalid snipe
-- [ ] Dockerize and send to GCloud
+- [ ] ~~Dockerize and send to GCloud~~
+- [x] Host on GCloud VM
 
 ## UX Improvements
 - [x] Make bot request confirmation from players players when or sniped
@@ -32,4 +33,4 @@
 - [ ] Add /endgame
 - [x] Add role based command restrictions
 
-# Last updated: 2025-06-05
+# Last updated: 2025-09-09
